crates/ruff_python_parser/tests/snapshots/invalid_syntax@multiple_clauses_on_same_line.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..258,
        body: [
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 0..41,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 3..7,
                            value: true,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 9..13,
                            },
                        ),
                    ],
                    elif_else_clauses: [
                        ElifElseClause {
                            range: 14..30,
                            node_index: NodeIndex(None),
                            test: Some(
                                BooleanLiteral(
                                    ExprBooleanLiteral {
                                        node_index: NodeIndex(None),
                                        range: 19..24,
                                        value: false,
                                    },
                                ),
                            ),
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 26..30,
                                    },
                                ),
                            ],
                            runtime_body: None,
                            runtime_orelse: None,
                        },
                        ElifElseClause {
                            range: 31..41,
                            node_index: NodeIndex(None),
                            test: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 37..41,
                                    },
                                ),
                            ],
                            runtime_body: None,
                            runtime_orelse: None,
                        },
                    ],
                    runtime_body: None,
                },
            ),
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 42..85,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 45..49,
                            value: true,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 51..55,
                            },
                        ),
                    ],
                    elif_else_clauses: [
                        ElifElseClause {
                            range: 57..73,
                            node_index: NodeIndex(None),
                            test: Some(
                                BooleanLiteral(
                                    ExprBooleanLiteral {
                                        node_index: NodeIndex(None),
                                        range: 62..67,
                                        value: false,
                                    },
                                ),
                            ),
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 69..73,
                                    },
                                ),
                            ],
                            runtime_body: None,
                            runtime_orelse: None,
                        },
                        ElifElseClause {
                            range: 75..85,
                            node_index: NodeIndex(None),
                            test: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 81..85,
                                    },
                                ),
                            ],
                            runtime_body: None,
                            runtime_orelse: None,
                        },
                    ],
                    runtime_body: None,
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 86..117,
                    is_async: false,
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 90..91,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 95..99,
                            id: Name("iter"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Break(
                            StmtBreak {
                                node_index: NodeIndex(None),
                                range: 101..106,
                            },
                        ),
                    ],
                    orelse: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 113..117,
                            },
                        ),
                    ],
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                    runtime_orelse: None,
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 118..150,
                    is_async: false,
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 122..123,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 127..131,
                            id: Name("iter"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Break(
                            StmtBreak {
                                node_index: NodeIndex(None),
                                range: 133..138,
                            },
                        ),
                    ],
                    orelse: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 146..150,
                            },
                        ),
                    ],
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                    runtime_orelse: None,
                },
            ),
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 151..202,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 156..160,
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 161..177,
                                node_index: NodeIndex(None),
                                type_: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 168..171,
                                            id: Name("exc"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: None,
                                body: [
                                    Pass(
                                        StmtPass {
                                            node_index: NodeIndex(None),
                                            range: 173..177,
                                        },
                                    ),
                                ],
                                runtime_body: None,
                            },
                        ),
                    ],
                    orelse: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 184..188,
                            },
                        ),
                    ],
                    finalbody: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 198..202,
                            },
                        ),
                    ],
                    is_star: false,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 203..257,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 208..212,
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 214..230,
                                node_index: NodeIndex(None),
                                type_: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 221..224,
                                            id: Name("exc"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: None,
                                body: [
                                    Pass(
                                        StmtPass {
                                            node_index: NodeIndex(None),
                                            range: 226..230,
                                        },
                                    ),
                                ],
                                runtime_body: None,
                            },
                        ),
                    ],
                    orelse: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 238..242,
                            },
                        ),
                    ],
                    finalbody: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 253..257,
                            },
                        ),
                    ],
                    is_star: false,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | if True: pass elif False: pass else: pass
  |               ^^^^ Syntax Error: Expected newline, found `elif`
2 | if True: pass; elif False: pass; else: pass
3 | for x in iter: break else: pass
  |


  |
1 | if True: pass elif False: pass else: pass
  |                                ^^^^ Syntax Error: Expected newline, found `else`
2 | if True: pass; elif False: pass; else: pass
3 | for x in iter: break else: pass
  |


  |
1 | if True: pass elif False: pass else: pass
2 | if True: pass; elif False: pass; else: pass
  |                ^^^^ Syntax Error: Expected newline, found `elif`
3 | for x in iter: break else: pass
4 | for x in iter: break; else: pass
  |


  |
1 | if True: pass elif False: pass else: pass
2 | if True: pass; elif False: pass; else: pass
  |                                  ^^^^ Syntax Error: Expected newline, found `else`
3 | for x in iter: break else: pass
4 | for x in iter: break; else: pass
  |


  |
1 | if True: pass elif False: pass else: pass
2 | if True: pass; elif False: pass; else: pass
3 | for x in iter: break else: pass
  |                      ^^^^ Syntax Error: Expected newline, found `else`
4 | for x in iter: break; else: pass
5 | try: pass except exc: pass else: pass finally: pass
  |


  |
2 | if True: pass; elif False: pass; else: pass
3 | for x in iter: break else: pass
4 | for x in iter: break; else: pass
  |                       ^^^^ Syntax Error: Expected newline, found `else`
5 | try: pass except exc: pass else: pass finally: pass
6 | try: pass; except exc: pass; else: pass; finally: pass
  |


  |
3 | for x in iter: break else: pass
4 | for x in iter: break; else: pass
5 | try: pass except exc: pass else: pass finally: pass
  |           ^^^^^^ Syntax Error: Expected newline, found `except`
6 | try: pass; except exc: pass; else: pass; finally: pass
  |


  |
3 | for x in iter: break else: pass
4 | for x in iter: break; else: pass
5 | try: pass except exc: pass else: pass finally: pass
  |                            ^^^^ Syntax Error: Expected newline, found `else`
6 | try: pass; except exc: pass; else: pass; finally: pass
  |


  |
3 | for x in iter: break else: pass
4 | for x in iter: break; else: pass
5 | try: pass except exc: pass else: pass finally: pass
  |                                       ^^^^^^^ Syntax Error: Expected newline, found `finally`
6 | try: pass; except exc: pass; else: pass; finally: pass
  |


  |
4 | for x in iter: break; else: pass
5 | try: pass except exc: pass else: pass finally: pass
6 | try: pass; except exc: pass; else: pass; finally: pass
  |            ^^^^^^ Syntax Error: Expected newline, found `except`
  |


  |
4 | for x in iter: break; else: pass
5 | try: pass except exc: pass else: pass finally: pass
6 | try: pass; except exc: pass; else: pass; finally: pass
  |                              ^^^^ Syntax Error: Expected newline, found `else`
  |


  |
4 | for x in iter: break; else: pass
5 | try: pass except exc: pass else: pass finally: pass
6 | try: pass; except exc: pass; else: pass; finally: pass
  |                                          ^^^^^^^ Syntax Error: Expected newline, found `finally`
  |
